--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ black = "^22.10"
 pre-commit = "^2.15.0"
 safety = "^2.3.1"
 
+[tool.poetry.group.dev.dependencies]
+pydocstyle = "^6.3.0"
+
 [tool.isort]
 profile = "black"
 
