--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,7 +46,7 @@ repos:
         types: ['python']
       - id: pydocstyle
         name: pydocstyle
-        entry: poetry run pydocstyle
+        entry: poetry run pydocstyle --convention=google
         language: system
         types: ['python']
         exclude: (?x)(
