Check poetry.lock consistency

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -46,4 +46,8 @@ jobs:
         run: |
           python -m poetry install
 
+      - name: Check poetry.lock consistency
+        shell: bash
+        run: poetry check --lock
+
       - uses: pre-commit/action@v3.0.0
