--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ tabulate = "^0.8.9"
 python-dateutil = "^2.8.2"
 click = "8.0.4"
 importlib = "^1.0.4"
+sphinxcontrib-napoleon = {version = "^0.7", optional = true}
+sphinx-rtd-theme = {version = "^1.3.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -27,6 +29,10 @@ safety = "^2.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pydocstyle = "^6.3.0"
+pylint-absolute-imports = "^1.0.1"
+
+[tool.poetry.extras]
+docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon"]
 
 [tool.isort]
 profile = "black"
