--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ click = "8.0.4"
 importlib = "^1.0.4"
 sphinxcontrib-napoleon = {version = "^0.7", optional = true}
 sphinx-rtd-theme = {version = "^1.3.0", optional = true}
+sphinx-subprojecttoctree = {version = "^0.5.4", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -32,7 +33,7 @@ pydocstyle = "^6.3.0"
 pylint-absolute-imports = "^1.0.1"
 
 [tool.poetry.extras]
-docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon"]
+docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinx-subprojecttoctree"]
 
 [tool.isort]
 profile = "black"
