--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ importlib = "^1.0.4"
 sphinxcontrib-napoleon = {version = "^0.7", optional = true}
 sphinx-rtd-theme = {version = "^1.3.0", optional = true}
 sphinx-subprojecttoctree = {version = "^0.5.1", optional = true}
+myst-parser = {version = "^2.0.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -33,7 +34,7 @@ pydocstyle = "^6.3.0"
 pylint-absolute-imports = "^1.0.1"
 
 [tool.poetry.extras]
-docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinx-subprojecttoctree"]
+docs = ["myst-parser", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinx-subprojecttoctree"]
 
 [tool.isort]
 profile = "black"
