Move safety hook to own config

--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -1,6 +1,6 @@
 ---
 
-name: Pre-commit
+name: Safety hook
 
 on:
   pull_request:
@@ -51,3 +51,5 @@ jobs:
         run: poetry check --lock
 
       - uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --config .pre-commit-safety.yaml
