--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -51,3 +51,5 @@ jobs:
         run: poetry check --lock
 
       - uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --all-files
