--- a/.pre-commit-safety.yaml
+++ b/.pre-commit-safety.yaml
@@ -5,6 +5,6 @@ repos:
     hooks:
       - id: safety
         name: Safety
-        entry: poetry run safety check --full-report
+        entry: poetry run safety --stage cicd scan --policy-file .safety-policy.yml
         pass_filenames: false
         language: system
