Make sure all versions of the cache install --all-extras

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -44,7 +44,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          python -m poetry install
+          python -m poetry install --all-extras
 
       - name: Run pytest
         shell: bash
