--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
-[tool.poetry]
-name = "rctab_cli"
-version = "0.1.0"
-description = ""
+[project]
 authors = []
+description = "The Command Line Interface for RCTab."
+dynamic = [ "dependencies" ]
+name = "rctab_cli"
+requires-python = ">=3.8"
+version = "0.1.0"
 
-[tool.poetry.dependencies]
-python = "^3.8.0"
+[tool.poetry.group.main.dependencies]
 msal = "^1.11.0"
 typer = "^0.12.3"
 aiohttp = "^3.7.4"
@@ -18,27 +19,25 @@ sphinxcontrib-napoleon = {version = "^0.7", optional = true}
 sphinx-rtd-theme = {version = "^1.3.0", optional = true}
 myst-parser = {version = "^2.0.0", optional = true}
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.1.3"
-isort = "^5.8.0"
-flake8 = "^5.0.4"
-pylint = "^2.15.4"
-mypy = "^0.931"
+[tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
+flake8 = "^5.0.4"
+isort = "^5.8.0"
+mypy = "^0.931"
 pre-commit = "^2.15.0"
+pydocstyle = "^6.3.0"
+pylint = "^2.15.4"
+pylint-absolute-imports = "^1.0.1"
+pytest = "^7.1.3"
 safety = "^3.1.0"
 
-[tool.poetry.group.dev.dependencies]
-pydocstyle = "^6.3.0"
-pylint-absolute-imports = "^1.0.1"
-
-[tool.poetry.extras]
+[project.optional-dependencies]
 docs = ["myst-parser", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]
 
 [tool.isort]
 profile = "black"
 
-[tool.poetry.scripts]
+[project.scripts]
 rctab =  "rctab_cli:app"
 
 [build-system]
