--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,17 @@
-[project]
-authors = []
-description = "The Command Line Interface for RCTab."
-dynamic = [ "dependencies" ]
+[tool.poetry]
 name = "rctab_cli"
-requires-python = ">=3.10"
 version = "1.1.0"
+description = "The Command Line Interface for RCTab."
+authors = []
 
-[tool.poetry.group.main.dependencies]
+# Optional: you can also add this
+readme = "README.md"
+packages = [{ include = "rctab_cli" }]
+license = "MIT"  # or whichever license you use
+homepage = "https://your-project-homepage.com"  # optional
+
+[tool.poetry.dependencies]
+python = ">=3.10"
 msal = "^1.31.0"
 typer = "^0.15.1"
 aiohttp = "^3.7.4"
@@ -18,6 +23,12 @@ importlib = "^1.0.4"
 sphinxcontrib-napoleon = {version = "^0.7", optional = true}
 sphinx-rtd-theme = {version = "^1.3.0", optional = true}
 myst-parser = {version = "^2.0.0", optional = true}
+
+[tool.poetry.extras]
+docs = ["sphinxcontrib-napoleon", "sphinx-rtd-theme", "myst-parser"]
+
+[tool.poetry.scripts]
+rctab = "rctab_cli:app"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
@@ -31,14 +42,8 @@ pylint-absolute-imports = "^1.0.1"
 pytest = "^7.1.3"
 safety = "^3.1.0"
 
-[project.optional-dependencies]
-docs = ["myst-parser", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]
-
 [tool.isort]
 profile = "black"
-
-[project.scripts]
-rctab =  "rctab_cli:app"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
